# copernicus

./: .gitignore  Cargo.toml
src/: db.rs  lib.rs  main.rs
templates/: get_user.html  signin.html
