[package]
name = "copernicus"
version = "0.1.0"

edition = "2021"

[dependencies]
base64 = "0.22.1"
sha2 = "0.10.8"

sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1.40.0", features = ["full"] }

serde = "1.0.210"
serde_json = "1.0.128"
axum = "0.7.6"

rsa = "0.9.6"
rand = "0.8.5"

log = "0.4.22"
env_logger = "0.11.5"
